Fixup feeder legend span spacing

--- a/src/styles/FeederView.scss
+++ b/src/styles/FeederView.scss
@@ -191,7 +191,7 @@ $bar-highlight: #e94f34;
             font-weight: 400;
           }
           span {
-            height: 27px;
+            padding: 0.5rem 0;
           }
           span,
           i {
